examples/test/testpolicy16606.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16606
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key38: value2
      key0: value47
      key28: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value26
          key31: value31
          key44: value43
      podSelector:
        matchLabels:
          key46: value33
          key16: value3
          key17: value48
